<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:padding="@dimen/layout_padding"
    android:scrollbars="horizontal" >

    <LinearLayout
        android:id="@+id/trip_name_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:weightSum="1" >

        <TextView
            android:id="@+id/text_trip_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:gravity="left"
            android:text="@string/text_trip_name"
            android:textSize="@dimen/text_size" />

        <EditText
            android:id="@+id/trip_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:gravity="center_horizontal"
            android:hint="@string/trip_name_hint"
            android:lines="1"
            android:maxLength="15"
            android:minLines="1"
            android:textSize="@dimen/text_size" >
        </EditText>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/start_date_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/trip_name_layout"
        android:weightSum="1" >

        <TextView
            android:id="@+id/start_date_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:gravity="left"
            android:text="@string/start_date_text"
            android:textSize="@dimen/text_size" />

        <Button
            android:id="@+id/start_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:gravity="center_horizontal"
            android:text="@string/date_button_text"
            android:textSize="@dimen/button_text_size" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/end_date_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/start_date_layout"
        android:weightSum="1" >

        <TextView
            android:id="@+id/end_date_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:gravity="left"
            android:text="@string/end_date_text"
            android:textSize="@dimen/text_size" />

        <Button
            android:id="@+id/end_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:gravity="center_horizontal"
            android:text="@string/date_button_text"
            android:textSize="@dimen/button_text_size" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/no_of_shares_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/end_date_layout"
        android:weightSum="1" >

        <TextView
            android:id="@+id/no_of_persons_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:gravity="left"
            android:text="@string/no_of_persons_text"
            android:textSize="@dimen/text_size" />

        <EditText
            android:id="@+id/no_of_persons"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:gravity="center_horizontal"
            android:hint="@string/no_of_persons_text_hint"
            android:inputType="numberDecimal"
            android:lines="1"
            android:maxLength="2"
            android:singleLine="true"
            android:textSize="@dimen/text_size" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/button_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/no_of_shares_layout"
        android:weightSum="0.5" >

        <Button
            android:id="@+id/add_person_next"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="0dp"
            android:layout_height="wrap_content"            
            android:drawableTop="@drawable/ic_arrow"
            android:text="@string/next"
            android:textSize="@dimen/text_size" 
            android:layout_gravity="center_horizontal"
            android:layout_weight="0.25"
            />
        
        <Button
            android:id="@+id/reset_report"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="0dp"
            android:layout_height="wrap_content"            
            android:text="@string/reset"
            android:textSize="@dimen/text_size" 
            android:layout_gravity="center_horizontal"
            android:layout_weight="0.25"
            />
        
    </LinearLayout>

</RelativeLayout>